--- a/index.html
+++ b/index.html
@@ -37,17 +37,54 @@
                 <img src="/images/image-computer.png" width="300px">
             </div>
 
+            <div class="quick">
+                <h3>Quick Search</h3>
+                <p>Easily search your content, category, web address, application and more</p>
+                <h3>iCloud Sync </h3>
+                <p>Instantly saves and syncs all snippets  across all your devices</p>
+                <h3>Complete History</h3>
+                <p>Retrieve any snippets from the first moment you started using the app.</p>
+    
+            </div>
 
+            <div class="acc">
+                <h2 class="every">Access Clipboard Anywhere</h2>
+                <p class="clip">Whether you're on the go, or on your computer, you can access all your
+                    Clipboard snippets in a few simple clicks
+            </div>
 
+            <div class="img">
+                <img src="/images/image-devices.png" width="300px">
+            </div>
 
-
-
-
-
-
-
-
+            <div class="list">
+                <ul id="list">
+                    <li><img src="images/logo-google.png"></li>
+                    <li><img src="images/logo-ibm.png"></li>
+                    <li><img src="images/logo-microsoft.png"></li>
+                    <li><img src="images/logo-hp.png"></li>
+                    <li><img src="images/logo-vector-graphics.png"></li>
+                </ul>
+            </div>
           </div>
+
+          <footer class="footer">
+            <div>
+                <header id="copy"> &copy; </header>
+            </div>
+            <div class="list1">
+                <ul id="list">
+                    <li>FAQs</li>
+                    <li>Contact Us </li>
+                    <li>Privacy Policy</li>
+                    <li>Press Kit</li>
+                    <li>Install Guide</li>
+                </ul>
+            </div>
+          </div>
+          </footer>
+
+          
 
 
 
